# role-play-ai

./: .gitignore  LICENSE  README.md  answer.md  architecture.md  dev.docker-compose.yml  docker-compose.yml  dockerfile
back-end/: .gitignore  Cargo.toml  index.html
back-end/src/: auth.rs  error.rs  main.rs
back-end/src/agents/: debater.rs  mod.rs  reciter.rs  recorder.rs  role_builder.rs  summarizer.rs
back-end/src/database/: init.rs  mod.rs  status.rs
back-end/src/database/models/: conversation.rs  conversation_template.rs  conversations.rs  debate_template.rs  debates.rs  mod.rs  roles.rs  tasks_tts.rs  users.rs  voices.rs
back-end/src/env/: mod.rs  utils.rs
back-end/src/reciter/: mod.rs
back-end/src/recorder/: mod.rs
back-end/src/server/: auth.rs  mod.rs
back-end/src/server/handlers/: download.rs  index.rs  login.rs  mod.rs  register.rs  signup.rs  upload.rs  verify.rs
back-end/src/server/handlers/auth/: login.rs  register.rs  verify.rs
back-end/src/server/handlers/conversation/: delete.rs  dialogs.rs  list.rs  mod.rs  new.rs
back-end/src/server/handlers/debate/: delete.rs  dialogs.rs  list.rs  mod.rs  new.rs  start.rs
back-end/src/server/handlers/role/: create.rs  delete.rs  details.rs  generate.rs  list.rs  mod.rs  search.rs
back-end/src/server/handlers/user/: avatar.rs  conversations.rs  debates.rs  mod.rs  profile.rs  roles.rs
back-end/src/server/sockets/: join.rs  message.rs  mod.rs  voice.rs
back-end/src/storage/: mod.rs
back-end/src/trace/: mod.rs
back-end/src/writer/: crawler.rs
front-end/: angular.json  package-lock.json  package.json
front-end-deprecated/: angular.json  package-lock.json
front-end-deprecated/src/app/: app.component.html  app.component.scss  app.component.ts
front-end-deprecated/src/app/core/interceptors/: auth.interceptor.ts
front-end-deprecated/src/app/features/auth/: auth.routes.ts
front-end-deprecated/src/app/features/auth/register/: register.component.scss
front-end-deprecated/src/app/features/chat/: chat.routes.ts
front-end/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
front-end/src/app/core/guards/: auth.guard.ts
front-end/src/app/core/interceptors/: error.interceptor.ts
front-end/src/app/core/models/: auth.ts  chat.ts  role.ts
front-end/src/app/core/services/: api.service.ts  auth.service.ts  chat.service.ts  role.service.ts
front-end/src/app/features/auth/: auth.routes.ts
front-end/src/app/features/chat/: chat.routes.ts
front-end/src/app/features/roles/: roles.routes.ts
(+14 files in other folders)
